--- a/Natours Project/index.html
+++ b/Natours Project/index.html
@@ -16,7 +16,17 @@
 
 <body>
     <header class="header">
-        Some text!
+        <div class="logo-box">
+            <img src="img/logo-white.png" alt="Logo" class="logo">
+        </div>
+
+        <div class="text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary-main">Outdoors</span>
+                <span class="heading-primary-sub">Is Where Life Happens</span>
+            </h1>
+        </div>
+
     </header>
 
 </body>
