--- a/Natours Project/index.html
+++ b/Natours Project/index.html
@@ -1,57 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./css/icon-font.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
 
-    <title>Natours | Exciting tours for adventurous people</title>
-  </head>
+  <link rel="stylesheet" href="./css/icon-font.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
-  <body>
-    <header class="header">
-      <div class="header__logo-box">
-        <img src="img/logo-white.png" alt="Logo" class="header__logo" />
+  <title>Natours | Exciting tours for adventurous people</title>
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__logo-box">
+      <img src="img/logo-white.png" alt="Logo" class="header__logo" />
+    </div>
+
+    <div class="header__text-box">
+      <h1 class="heading-primary">
+        <span class="heading-primary--main">Outdoors</span>
+        <span class="heading-primary--sub">Is Where Life Happens</span>
+      </h1>
+
+      <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+    </div>
+  </header>
+
+  <main>
+    <section class="section-about">
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">
+          Exciting tours for adventurous people!
+        </h2>
       </div>
 
-      <div class="header__text-box">
-        <h1 class="heading-primary">
-          <span class="heading-primary--main">Outdoors</span>
-          <span class="heading-primary--sub">Is Where Life Happens</span>
-        </h1>
+      <div class="row">
+        <div class="col-1-of-2">
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            You are going to fall in love with nature
+          </h3>
+          <p class="paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Consequatur ad hic culpa deserunt. Voluptatum recusandae quo enim
+            delectus quos architecto doloremque, quia quis autem nam quasi
+            molestiae dicta, id itaque!
+          </p>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Live adventures like you never have before
+          </h3>
+          <p class="paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis fugit doloremque soluta inventore adipisci
+            necessitatibus.
+          </p>
 
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+          <a href="#" class="btn-text">Learn more &rarr;</a>
+        </div>
+        <div class="col-1-of-2">
+          Image Composition
+        </div>
       </div>
-    </header>
+    </section>
+  </main>
 
-    <main>
-      <section class="section-about">
-        <div class="u-center-text">
-          <h2 class="heading-secondary">
-            Exciting tours for adventurous people!
-          </h2>
-        </div>
-
-        <div class="row">
-          <div class="col-1-of-2">
-            Col 1 of 2
-          </div>
-          <div class="col-1-of-2">
-            Col 1 of 2
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!-- <section class="grid-test">
+  <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">
           Col 1 of 2
@@ -118,5 +134,6 @@
         </div>
       </div>
     </section> -->
-  </body>
+</body>
+
 </html>
