--- a/Natours Project/index.html
+++ b/Natours Project/index.html
@@ -7,6 +7,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
 
+  <link rel="stylesheet" href="css/icon-font.css" />
+  <link rel="stylesheet" href="css/icon-font.css" />
   <link rel="stylesheet" href="./css/icon-font.css" />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -46,8 +48,7 @@
           <p class="paragraph">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Consequatur ad hic culpa deserunt. Voluptatum recusandae quo enim
-            delectus quos architecto doloremque, quia quis autem nam quasi
-            molestiae dicta, id itaque!
+            delectus quos architecto doloremque.
           </p>
           <h3 class="heading-tertiary u-margin-bottom-small">
             Live adventures like you never have before
@@ -61,9 +62,58 @@
           <a href="#" class="btn-text">Learn more &rarr;</a>
         </div>
         <div class="col-1-of-2">
-          Image Composition
+          <div class="composition">
+            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+          </div>
         </div>
       </div>
+    </section>
+
+    <section class="section-features">
+
+
+      <div class="row">
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-world"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+            <p class="feature-box__class">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequatur ad hic culpa deserunt.</p>
+          </div>
+        </div>
+
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-compass"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
+            <p class="feature-box__class">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequatur ad hic culpa deserunt.</p>
+          </div>
+        </div>
+
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-map"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+            <p class="feature-box__class">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequatur ad hic culpa deserunt.</p>
+          </div>
+        </div>
+
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-heart"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+            <p class="feature-box__class">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequatur ad hic culpa deserunt.</p>
+          </div>
+        </div>
+      </div>
+
+
+
     </section>
   </main>
 
